make random sample cmd simpler

--- a/samples/random/Dockerfile
+++ b/samples/random/Dockerfile
@@ -4,4 +4,4 @@ COPY stubs /home/wiremock
 
 ADD https://repo1.maven.org/maven2/com/opentable/wiremock-body-transformer/1.1.3/wiremock-body-transformer-1.1.3.jar /var/wiremock/extensions/
 
-CMD ["java", "-cp", "/var/wiremock/lib/*:/var/wiremock/extensions/*", "com.github.tomakehurst.wiremock.standalone.WireMockServerRunner", "--extensions", "com.opentable.extension.BodyTransformer"]
+CMD ["--extensions", "com.opentable.extension.BodyTransformer"]
